Un 'Hello World' multilingue avec Java 25 et record-args